Fix AutoHideScrollbar implementation in ThreadView

--- a/res/css/views/right_panel/_BaseCard.scss
+++ b/res/css/views/right_panel/_BaseCard.scss
@@ -22,7 +22,7 @@ limitations under the License.
     flex: 1;
 
     .mx_BaseCard_header {
-        margin: 8px 0;
+        margin: 4px 0;
 
         > h2 {
             margin: 0 44px;
