--- a/res/css/views/rooms/_EventTile.scss
+++ b/res/css/views/rooms/_EventTile.scss
@@ -755,7 +755,7 @@ $left-gutter: 64px;
     --topOffset: 20px;
     --leftOffset: 46px;
 
-    margin: var(--topOffset) 32px var(--topOffset) 0;
+    margin: var(--topOffset) 16px var(--topOffset) 0;
     border-radius: 8px;
 
     &:hover {
